# yf-auth-templates

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  package-lock.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: automated-checks.yml
nbproject/: project.xml
templates/allianceauth/: top-menu.html
templates/bundles/: bootstrap-js.html  datatables-css.html
templates/fleetup/: characters.html  doctrine.html  doctrinesview.html  fitting.html  fittingsview.html
templates/public/: base.html  login.html
yf_templates/: __init__.py  apps.py
yf_templates/locale/de/LC_MESSAGES/: django.mo  django.po
yf_templates/locale/es/LC_MESSAGES/: django.po
yf_templates/locale/ko/LC_MESSAGES/: django.po
yf_templates/locale/ru/LC_MESSAGES/: django.po
yf_templates/locale/zh_Hans/LC_MESSAGES/: django.po
yf_templates/static/yf_templates/css/: yulai-federation.css  yulai-federation.min.css  yulai-federation.min.css.map
yf_templates/templates/allianceauth/: base.html  icons.html  top-menu.html
yf_templates/templates/bundles/: datatables-js.html  fontawesome.html
yf_templates/templates/public/: base.html  login.html  register.html
yf_templates/templates/registration/: activate.html  registration_form.html
