[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "yf-templates"
version = "0.3.0"
description = "Yulai Federation Template Overrides for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "template",
    "template_override",
    "yulai_federation",
]
license = {file = "LICENSE"}
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=3",
]
[project.urls]
Changelog = "https://github.com/yulai-federation/yf-auth-templates/blob/master/CHANGELOG.md"
"Issue / Bug Reports" = "https://github.com/yulai-federation/yf-auth-templates/issues"

[tool.hatch.version]
path = "yf_templates/__init__.py"

[tool.hatch.build]
include = [
    "/yf_templates",
]
