[metadata]
name = yf_templates
version = attr: yf_templates.__version__
description = Yulai Federation Template Overrides for Alliance Auth
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Pfeufer
author_email = develop@ppfeufer.de
maintainer = Peter Pfeufer
maintainer_email = develop@ppfeufer.de
license = GPL-2.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/yulai-federation/yf-auth-templates
keywords =
    allianceauth
    eveonline
    template
    template_override
    yulai_federation
project_urls =
    Issue / Bug Reports = https://github.com/yulai-federation/yf-auth-templates/issues
    Changelog = https://github.com/yulai-federation/yf-auth-templates/blob/master/CHANGELOG.md

[options]
packages = find:
install_requires =
    allianceauth>=3.0.0
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = yf_templates
